--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -7,7 +7,7 @@
   border: none;
   border-radius: 0;
   min-height: 0;
-  font-family: 'GeistMono Nerd Font';
+  font-family: 'MesloLGM Nerd Font';
   font-size: 12px;
 }
 
